--- a/roles/lxd-container/templates/container-config.yml
+++ b/roles/lxd-container/templates/container-config.yml
@@ -7,7 +7,7 @@ config:
       - openssh-server
     users:
      - name: root
-       ssh-authorized-keys: {{ ssh_keys }}
+       ssh-authorized-keys: {{ root_ssh_keys }}
   user.network-config: |
     version: 1
     config:
