- install some Ansible dependencies (to supress info messages) - root ssh keys are set during the bootstrap

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,11 +1,17 @@
 ---
+- name: Install Ansible dependencies
+  apt:
+    name: python3-apt
+    state: present
+    update_cache: yes
+
 - name: set timezone to Europe/Prague
   timezone:
     name: Europe/Prague
 
-- name: Set SSH keys for root
-  authorized_key:
-    user: root
-    state: present
-    key: "{{ item }}"
-  loop: "{{ root_ssh_keys }}"
+#- name: Set SSH keys for root
+#  authorized_key:
+#    user: root
+#    state: present
+#    key: "{{ item }}"
+#  loop: "{{ root_ssh_keys }}"
