--- a/training/playbook.yml
+++ b/training/playbook.yml
@@ -32,7 +32,7 @@
 
     - role: lxd
       vars:
-        ipv4_address: 10.0.10.1/24
+        lxd_ipv4_address: 10.0.10.1/24
         ipv4_dhcp_range: 10.0.10.100-10.0.10.254
 
     - role: lxd-container
