Make the bootstrap work

--- a/training/bootstrap-playbook.yml
+++ b/training/bootstrap-playbook.yml
@@ -5,6 +5,7 @@
   become_method: sudo
   become: yes
   gather_facts: no
+  remote_user: ubuntu
 
   vars_files:
     - "vars/root_ssh_keys.yml"
@@ -14,7 +15,7 @@
       raw: "{{ item }}"
       loop:
         - sudo apt-get update
-        - sudo apt-get -y install python3
+        - sudo apt-get -y install python
   tasks:
     - name: Set SSH keys for root
       authorized_key:
