silent some warning for the time being

--- a/training/ansible.cfg
+++ b/training/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
 roles_path = ../roles
 inventory = ./inventories
-ansible_python_interpreter = auto
+# XXX review these two settings:
+interpreter_python = auto_silent
 deprecation_warnings=False
