--- a/training/playbook.yml
+++ b/training/playbook.yml
@@ -25,6 +25,13 @@
         dest: /etc/ssh/ssh_config.d/training.conf
         owner: root
 
+    - name: Create /etc/hosts records
+      lineinfile:
+        path: /etc/hosts
+        line: "{{ item.ipv4_address }} {{ item.name }}"
+      loop: "{{ containers }}"
+
+
   roles:
     - role: common
 
