--- a/training/playbook.yml
+++ b/training/playbook.yml
@@ -31,6 +31,11 @@
         line: "{{ item.ipv4_address }} {{ item.name }}"
       loop: "{{ containers }}"
 
+    - name: Create list of nodes to install in the second stage
+      template:
+        src: inventory.j2
+        dest: /root/inner-hosts
+
 
   roles:
     - role: common
