--- a/training/inner-playbook.yml
+++ b/training/inner-playbook.yml
@@ -15,10 +15,11 @@
           - ansible_distribution_major_version == "10"
         msg: "Debian 10 is required"
 
-#    - name: Install dependencies
-#      apt:
-#        name: python3-apt
-#        update_cache: yes
+    - name: Install dependencies, avoid a warning
+      raw: "{{ item }}"
+      loop:
+        - apt-get update
+        - apt-get -y install python3-apt
 
   roles:
 
