Extend configuration of dockerd, can be made bind to TCP port and be available

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -13,12 +13,8 @@
     regexp: '^nogroup:'
     line: nogroup:886432:65536
 
-#- name: Configure Docker
-#  template:
-#    src: daemon.json.j2
-#    dest: /etc/docker/daemon.json
-#    owner: root
-#  notify: "restart docker"
+- include_tasks: "configure.yml"
+  when: expose_docker
 
   # if the server isn't restarted now, the network definition diseppeaer after the
   # next restart
