--- a/sandbox.yml
+++ b/sandbox.yml
@@ -24,21 +24,21 @@ routers:
     flavor: csirtmu.tiny1x2
 
 networks:
-  - name: training_lan
+  - name: LAN
     cidr: 10.20.30.0/24
 
 net_mappings:
     - host: master
-      network: training_lan
+      network: LAN
       ip: 10.20.30.100
 
     - host: task2
-      network: training_lan
+      network: LAN
       ip: 10.20.30.49
 
 router_mappings:
     - router: router
-      network: training_lan
+      network: LAN
       ip: 10.20.30.1
 
 groups:
