--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -9,3 +9,7 @@
     - name: disable qxl
       include_role:
         name: kypo-disable-qxl
+
+    - name: fail here
+      fail:
+        msg: bailing out ...
