--- a/roles/training/tasks/main.yml
+++ b/roles/training/tasks/main.yml
@@ -23,3 +23,16 @@
     protocol: tcp
     destination_port: "2375"
     jump: DROP
+
+- name: Create jenkins configuration location
+  file:
+    path: /etc/jenkins
+    mode: 0700
+    owner: root
+    state: directory
+
+- name: Jenkins configuration with exposed docker endpoint
+  template:
+    src: pipeline-build.conf.j2
+    dest: /etc/jenkins/pipeline-build.conf
+    owner: root
