--- a/training/playbook.yml
+++ b/training/playbook.yml
@@ -51,7 +51,7 @@
   roles:
     - role: common
       vars:
-        hostname: task2
+        hostname: jenkins-runner
 
     - role: docker
       vars:
