configure credential leak for task3

--- a/training/playbook.yml
+++ b/training/playbook.yml
@@ -48,6 +48,15 @@
   vars_files:
     - "vars/root_ssh_keys.yml"
     - "vars/training_network.yml"
+    - "vars/task3.yml"
+
+  tasks:
+    - name: Docker probe
+      template:
+        src: docker_probe.j2
+        dest: /usr/local/sbin/docker_probe
+        owner: root
+        mode: 0700
 
   roles:
     - role: common
