--- a/roles/training/tasks/artifacts-main.yml
+++ b/roles/training/tasks/artifacts-main.yml
@@ -10,12 +10,7 @@
     path: /etc/hosts
     line: "{{ item.ipv4_address }} {{ item.name }}"
   loop: "{{ containers }}"
-
-- name: Prepare authorized_keys for task1
-  lineinfile:
-    path: /root/task2/ssh/authorized_keys
-    line: "{{ lookup('file', 'ssh/user.pub') }}"
-    create: yes
+  when: containers is defined
 
 - name: Block access to remote docker daemons
   iptables:
@@ -23,16 +18,3 @@
     protocol: tcp
     destination_port: "2375"
     jump: DROP
-
-- name: Create jenkins configuration location
-  file:
-    path: /etc/jenkins
-    mode: 0700
-    owner: root
-    state: directory
-
-- name: Jenkins configuration with exposed docker endpoint
-  template:
-    src: pipeline-build.conf.j2
-    dest: /etc/jenkins/pipeline-build.conf
-    owner: root
