Use david's account for a flag

--- a/roles/training/tasks/artifacts-jenkins_runner.yml
+++ b/roles/training/tasks/artifacts-jenkins_runner.yml
@@ -1,10 +1,10 @@
 ---
-#- name: Docker probe
-#  template:
-#    src: docker_probe.j2
-#    dest: /usr/local/sbin/docker_probe
-#    owner: root
-#    mode: 0700
+- name: Docker probe
+  template:
+    src: docker_probe.j2
+    dest: /usr/local/sbin/docker_probe
+    owner: root
+    mode: 0700
 
 - name: Prepare authorized_keys for tasks
   lineinfile:
