If needed, restart dockerd before containers are started

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -66,3 +66,7 @@
   shell:
     cmd: docker load < "/tmp/{{ image }}.tar"
   when: tranferred.changed
+
+# make sure dockerd is restarted before containers are created
+- name: Flush handlers
+  meta: flush_handlers
